@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-16T00:29:46Z",
+  "timestamp" : "2024-01-16T08:08:36Z",
   "count_outdated" : 219,
   "uniques_outdated" : 154,
-  "count" : 227,
-  "uniques" : 162,
+  "count" : 228,
+  "uniques" : 163,
   "clones" : [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-01-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
