@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 8,
   "clones": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2024-01-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-16T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
